--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/index.css"/>
-  <title>Contact List</title>
+  <title>Joy's Cookbook</title>
 </head>
 <body>
   <div id="app"></div>
